--- a/templates/template.html
+++ b/templates/template.html
@@ -6,5 +6,10 @@
 <body>
 	<h1>Honors Capstone</h1>
 	<h3>Mike Ward</h3>
+	<form method="post">
+        <input type="text" name="mva_days"/>
+        <input type="text" name="cash"/>
+        <input type="submit" text="Run Algo"/>
+        </form>
 	<p>{{ text }}</p>
 </html>
