adding axis labels to graph

--- a/templates/template.html
+++ b/templates/template.html
@@ -32,13 +32,13 @@
       	x: {{ price_data_x }},
       	y: {{ price_data_y }},
       	type: 'scatter',
-		name: 'trend'
+		name: 'price'
       };
       var mva_line = {
       	x: {{ mva_data_x }},
       	y: {{ mva_data_y }},
       	type: 'scatter',
-		name: 'trend'
+		name: 'moving average'
       };
       var data = [price_line, mva_line];
       var layout = {
