--- a/templates/template.html
+++ b/templates/template.html
@@ -21,11 +21,14 @@
   		<input type="radio" name="currency" id="eth" value="ETH" {{ eth_checked }}>
   		<label for="eth">Ethereum</label>
   		<br>
+  		<input type="radio" name="currency" id="ltc" value="LTC" {{ ltc_checked }}>
+  		<label for="ltc">Litecoin</label>
+  		<br>
         <input type="submit" value="Run Algo"/>
         </form>
 	<p>{{ text }}</p>
 
-	<p style="text-align: center;">Bitcoin results</p>
+	<h2 style="text-align: center;">Price and Moving Average</h2>
       <div id="chart" style="height=100%;"></div>
       <script>
       var price_line = {
