adding bitcoin cash and ripple

--- a/templates/template.html
+++ b/templates/template.html
@@ -24,6 +24,12 @@
   		<input type="radio" name="currency" id="ltc" value="LTC" {{ ltc_checked }}>
   		<label for="ltc">Litecoin</label>
   		<br>
+      <input type="radio" name="currency" id="bch" value="BCH" {{ bch_checked }}>
+      <label for="ltc">Bitcoin Cash</label>
+      <br>
+      <input type="radio" name="currency" id="xrp" value="XRP" {{ xrp_checked }}>
+      <label for="ltc">Ripple</label>
+      <br>
         <input type="submit" value="Run Algo"/>
         </form>
 	<p>{{ text }}</p>
